--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -16,6 +16,61 @@
     html, body { height: 100%; margin: 0; }
     #map { height: 100vh; width: 100%; }
     .leaflet-popup-content { font: 14px/1.4 system-ui, sans-serif; }
+
+    /* Nouveau style légende */
+    .legend-container {
+      position: fixed;
+      top: 80px;
+      right: 3vw;
+      z-index: 1001;
+    }
+    #legend-toggle {
+      padding: 6px 12px 6px 10px;
+      font-size: 0.92em;
+      border-radius: 10px;
+      background: linear-gradient(90deg, #2c3e50 0%, #6c7a89 100%);
+      color: #fff;
+      border: none;
+      box-shadow: 0 2px 8px rgba(44,62,80,0.08);
+      cursor: pointer;
+      font-weight: bold;
+      letter-spacing: 1px;
+      transition: background 0.2s, box-shadow 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      opacity: 0.92;
+    }
+    #legend-box {
+      display: none;
+      position: absolute;
+      top: 100%;   /* sous le bouton */
+      right: 0;    /* aligné à droite */
+      background: white;
+      border: 2px solid #4f8cff;
+      border-radius: 12px;
+      padding: 12px 14px;
+      max-width: 240px;
+      max-height: 250px;
+      overflow-y: auto;
+      box-shadow: 0 4px 16px rgba(79,140,255,0.13);
+      font-family: system-ui, sans-serif;
+      font-size: 0.9em;
+      margin-top: 6px;
+    }
+
+    @media (max-width: 600px) {
+      .legend-container {
+        top: 98px !important;
+        right: 2vw !important;
+      }
+      #legend-toggle {
+        padding: 6px 10px 6px 8px !important;
+        font-size: 0.82em !important;
+        border-radius: 8px !important;
+        min-width: 54px !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -27,23 +82,15 @@
       </span>
     </div>
   </div>
-  <button id="legend-toggle" style="position: fixed; top: 80px; right: 3vw; left: auto; transform: none; z-index: 1001; padding: 6px 12px 6px 10px; font-size: 0.92em; border-radius: 10px; background: linear-gradient(90deg, #2c3e50 0%, #6c7a89 100%); color: #fff; border: none; box-shadow: 0 2px 8px rgba(44,62,80,0.08); cursor: pointer; font-weight: bold; letter-spacing: 1px; transition: background 0.2s, box-shadow 0.2s; display: flex; align-items: center; gap: 8px; height: auto; width: auto; min-width: 60px; min-height: 0; opacity:0.92;">
-    Légende
-    <span id="legend-arrow" style="display:inline-block; transition: transform 0.2s; font-size:1em;">&#9660;</span>
-  </button>
-  <style>
-    @media (max-width: 600px) {
-      #legend-toggle {
-        top: 98px !important;
-        right: 2vw !important;
-        padding: 6px 10px 6px 8px !important;
-        font-size: 0.82em !important;
-        border-radius: 8px !important;
-        min-width: 54px !important;
-      }
-    }
-  </style>
-  <div id="legend-box" style="display:none; position: fixed; top: 65px; left: 50%; transform: translateX(-50%); background: white; border: 2px solid #4f8cff; border-radius: 16px; padding: 16px 18px; z-index: 1001; max-height: 60vh; overflow-y: auto; min-width: 180px; box-shadow: 0 4px 24px rgba(79,140,255,0.13); font-family: system-ui, sans-serif; font-size: 0.92em;"></div>
+
+  <!-- Conteneur bouton + légende -->
+  <div class="legend-container" id="legendBox">
+    <button id="legend-toggle">
+      Légende <span id="legend-arrow" style="display:inline-block; transition: transform 0.2s; font-size:1em;">&#9660;</span>
+    </button>
+    <div id="legend-box"></div>
+  </div>
+
   <div id="map"></div>
 
   <!-- Leaflet JS -->
@@ -77,7 +124,6 @@
           '#d95f02', '#7570b3', '#e7298a', '#66a61e', '#e6ab02',
           '#a6761d', '#666666'
         ];
-        // Récupère toutes les espèces uniques
         geojson.features.forEach(f => {
           const espece = f.properties.nom_reconn;
           if (espece && !(espece in couleurs)) {
@@ -85,7 +131,6 @@
             colorIdx++;
           }
         });
-        // Style dynamique selon l'espèce
         const layer = L.geoJSON(geojson, {
           pointToLayer: (feature, latlng) =>
             L.circleMarker(latlng, { radius: 8, weight: 2 }),
@@ -95,7 +140,6 @@
             return { color: couleur, fillColor: couleur, weight: 2, fillOpacity: 0.7 };
           },
           onEachFeature: (feature, lyr) => {
-            // Popup auto avec tous les attributs
             const props = feature.properties || {};
             let html = '<b>Informations</b><br/>';
             for (const k in props) {
@@ -104,20 +148,16 @@
               }
             }
             lyr.bindPopup(html);
-            // Amélioration mobile : ouverture du popup aussi sur touchstart
             lyr.on('click', function(e) { this.openPopup(); });
             lyr.on('touchstart', function(e) { this.openPopup(); });
           }
         }).addTo(map);
 
-        // 4) Zoom sur l’emprise de la couche
         try {
           map.fitBounds(layer.getBounds(), { padding: [20, 20] });
-        } catch(e) {
-          // Si c’est un seul point ou data vide, on ignore
-          console.warn('Impossible de calculer les bounds :', e);
-        }
-        // Génération de la légende APRÈS chargement du geojson et définition des couleurs
+        } catch(e) { console.warn('Impossible de calculer les bounds :', e); }
+
+        // Légende
         const legendBox = document.getElementById('legend-box');
         const legendToggle = document.getElementById('legend-toggle');
         if (legendBox && legendToggle) {
@@ -133,14 +173,12 @@
               document.getElementById('legend-arrow').style.transform = 'rotate(0deg)';
             }
           });
-          // Remplir la légende avec les espèces et couleurs
-          let legendHtml = '<b style="font-size:1.08em;">Légende</b><br/><div style="height:14px;"></div>';
+          let legendHtml = '<b style="font-size:1.08em;">Légende</b><br/><div style="height:10px;"></div>';
           Object.entries(couleurs).forEach(([espece, couleur]) => {
-            // On ne garde que le nom avant la virgule, en italique
             let nomCourt = espece ? espece.split(',')[0] : '';
-            legendHtml += `<div style='display:flex;align-items:center;margin-bottom:7px;'>` +
-              `<span style='display:inline-block;width:18px;height:18px;background:${couleur};border-radius:50%;margin-right:10px;border:2px solid #4f8cff;'></span>` +
-              `<span style='font-size:1em;font-style:italic;'>${nomCourt}</span></div>`;
+            legendHtml += `<div style='display:flex;align-items:center;margin-bottom:6px;'>` +
+              `<span style='display:inline-block;width:16px;height:16px;background:${couleur};border-radius:50%;margin-right:8px;border:2px solid #4f8cff;'></span>` +
+              `<span style='font-size:0.95em;font-style:italic;'>${nomCourt}</span></div>`;
           });
           legendBox.innerHTML = legendHtml;
         }
