--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     fetch('QR_serpentinites_2024.geojson')
       .then(r => r.json())
       .then(geojson => {
+        // Génère une couleur unique pour chaque espèce (nom_reconn)
         const couleurs = {};
         let colorIdx = 0;
         const palette = [
