--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       const input = document.getElementById("code").value;
       const correctCode = "1234"; // 🔑 remplace par ton vrai code
       if (input === correctCode) {
-        window.location.href = "index.html"; // redirige vers ton contenu sensible
+        window.location.href = "secret.html"; // redirige vers ton contenu sensible
       } else {
         document.getElementById("msg").textContent = "Code incorrect.";
       }
